# embassy-stm32-hub75

./: .gitignore  Cargo.toml  README.md  embassy-stm32-hub75.code-workspace  rust-toolchain.toml  stm-hub75.code-workspace
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: hello.rs
examples/stm32f722/: Cargo.toml
examples/stm32f722/.cargo/: config.toml
examples/stm32h723/: Cargo.toml
examples/stm32h723/.cargo/: config.toml
examples/stm32wl55/: Cargo.toml  stm32wl55.code-workspace
examples/stm32wl55/.cargo/: config.toml
src/: bcm.rs  dma.rs  latched.rs  lib.rs
