[package]
name = "embassy-stm32-hub75"
description = "A Rust driver for HUB75 LED matrix displays on STM32 microcontrollers"
repository = "https://github.com/liebman/embassy-stm32-hub75"
documentation = "https://docs.rs/embassy-stm32-hub75"
keywords = ["stm32", "led-matrix", "hub75", "embedded", "driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2021"
version = "0.1.0"
authors = ["liebman <liebman@zod.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false

[profile.dev]
debug = true  # Symbols are nice and they don't increase the size on Flash
opt-level = 2

[dependencies]
critical-section = "1.2"
defmt = { version = "1.0.1", optional = true }
embedded-graphics = "0.8.2"
embassy-stm32 = { version = "0.6.0", default-features = false, features = [
    "unstable-pac",
] }
hub75-framebuffer = "0.8.0"

[features]
default = []
defmt = [
    "dep:defmt",
    "embassy-stm32/defmt",
    "hub75-framebuffer/defmt",
    "embedded-graphics/defmt",
]

# only used for documentation!
stm32f722 = ["embassy-stm32/stm32f722ze"]

[package.metadata.docs.rs]
features = ["stm32f722"]
targets = ["thumbv7em-none-eabi"]


[patch.crates-io]

hub75-framebuffer = { path = "../hub75-framebuffer" }
